objects/ssot__FundingOpportunity__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ApplicationTimelineId__c</fullName>
        <label>Application Timeline</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__BudgetTemplateId__c</fullName>
        <label>Budget Template</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDateTime__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FundingOpportunityStatus__c</fullName>
        <label>Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Funding Opportunity Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MaximumFundingAmount__c</fullName>
        <label>Maximum Funding Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__MinimumFundingAmount__c</fullName>
        <label>Minimum Funding Amount</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ParentFundingOpportunityId__c</fullName>
        <label>Parent Funding Opportunity</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ProgramId__c</fullName>
        <label>Program</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDateTime__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716670493800_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FundingOpportunity_BudgetTemplateId__rel</label>
        <referenceTo>ssot__Budget__dlm</referenceTo>
        <relationshipLabel>FundingOpportunity_BudgetTemplateId__rel</relationshipLabel>
        <relationshipName>rel_1716670493800_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716670506968_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FundingOpportunity_ParentFundingOppo_rel</label>
        <referenceTo>ssot__FundingOpportunity__dlm</referenceTo>
        <relationshipLabel>FundingOpportunity_ParentFundingOppo_rel</relationshipLabel>
        <relationshipName>rel_1716670506968_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716670512060_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FundingOpportunity_ProgramId_map_Pro_rel</label>
        <referenceTo>ssot__Program__dlm</referenceTo>
        <relationshipLabel>FundingOpportunity_ProgramId_map_Pro_rel</relationshipLabel>
        <relationshipName>rel_1716670512060_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>